# saphedit

./: Cargo.toml  README.md  build.rs
src/: atlas.rs  config.rs  main.rs  rope.rs  shader.rs
src/shaders/: fragment.glsl  shape_fragment.glsl  shape_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
