[package]
name = "saphedit"
version = "0.1.0"
edition = "2021"
include = ["fonts"]
keywords = ["text", "graphics", "editor"]
license = "unlicense"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossfont = "0.5.1"
gl = "0.14.0"
image = "0.24.5"
sdl2 = { version = "0.35.2", features = ["ttf", "use-pkgconfig", "static-link"] }

[[bin]]
name = "sedit"
path = "src/main.rs"

[profile.release]
debug = true