[package]
name = "saphedit"
version = "0.1.0"
edition = "2021"
include = ["fonts"]
keywords = ["text", "graphics", "editor"]
license = "unlicense"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossfont = "0.5"
gl = "0.14"
sdl2 = { version = "0.35", features = ["use-pkgconfig", "static-link"] }

[[bin]]
name = "sedit"
path = "src/main.rs"

[profile.release]
debug = true